--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,7 +109,7 @@ header, .header{
     background: #fff;
 }
 .brand img{
-    height: 40px;
+    height: 52px;
     width: auto;
     display:block;
 }
@@ -180,6 +180,7 @@ input[type="text"],
 input[type="date"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
 select{
     padding: 10px 12px;
     border: 1px solid rgba(15,23,42,.18);
